--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2018"
 
 [dependencies]
 rl-sys = "0.5.2"
-lazy_static = "1.4.0"
+libc = "0.2.70"
+strum = "0.18.0"
+strum_macros = "0.18.0"
