--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rl-sys = "0.5.2"
 libc = "0.2.70"
 strum = "0.18.0"
 strum_macros = "0.18.0"
+rustyline = "9.1.2"
+clearscreen = "1.0.10"
